# novelopment

./: README.md  pyproject.toml
novelopment/: aggregator.py  content_determiner.py  document_planner.py  expressions_generator.py  lexicon.py  main.py  miner.py  novel.py  realizer.py
src/: main.py  miner.py  novel.py
