[tool.poetry]
name = "novelopment"
version = "0.1.0"
description = "Generating novels based on git repositories"
authors = ["dubbl <dubbel14@googlemail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.7, <4"
requests = "^2.28.1"
pycorpora = "^0.1.2"
PyDriller = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
